# groonga-function-regex

./: Makefile.am  README.md  configure.ac
functions/: Makefile.am  regex.cpp
test/suite/: regex_extract.expected  regex_extract.test  regex_extract_fail.expected  regex_extract_fail.test  regex_replace.expected  regex_replace.reject  regex_replace.test
